--- a/models/pom.xml
+++ b/models/pom.xml
@@ -14,21 +14,21 @@
     </repositories>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>18.0</version>
+            <version>33.4.0-jre</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.ow2.sat4j</groupId>
 		    <artifactId>org.ow2.sat4j.core</artifactId>
 		    <version>2.3.4</version>
-		</dependency>
+        </dependency>
 		<dependency>
             <groupId>jdd</groupId>
             <artifactId>jdd</artifactId>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.4</version>
+            <version>3.17.0</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
