--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -5,8 +5,8 @@
   <version>0.0.1-SNAPSHOT</version>
 
   <properties>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
+      <maven.compiler.source>23</maven.compiler.source>
+      <maven.compiler.target>23</maven.compiler.target>
   </properties>
 
   <build>
@@ -50,10 +50,11 @@
             <artifactId>models</artifactId>
             <version>1.0</version>
         </dependency>
-        <dependency>
+        <!-- <dependency>
         	<groupId>cs.wisc.edu</groupId>
         	<artifactId>Parsers</artifactId>
         	<version>1.0</version>
         </dependency>
+        -->
   </dependencies>
 </project>
