--- a/pom.xml
+++ b/pom.xml
@@ -11,12 +11,12 @@
     <name>symbolicautomata</name>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>23</maven.compiler.source>
+        <maven.compiler.target>23</maven.compiler.target>
     </properties>
 
     <modules>
-        <module>automatark</module>
+        <!-- module>automatark</module-->
         <module>models</module>
         <module>benchmarks</module>
     </modules>
